--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-minimal
 
 title: Austin Tercha
+description: Website for Austin Tercha with links to resume and projects
 
 logo: pictures/logo.jpg
